# Roboy

./: .gitignore  .gitmodules  Doxyfile  README.md  requirements.txt
debian/: .rules.swp  changelog  control  copyright  rules
src/: start-cognition.sh
src/roboy_cognition_manager/: CMakeLists.txt  package.xml
src/roboy_cognition_manager/launch/: roboy.launch
